--- a/Treinamento/main.html
+++ b/Treinamento/main.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Minha página</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
-        <title>Document</title>
     </head>
     <body>
-        <h1>WebGaF Inovações Tecnológicas</h1>
+        <div>
+            <header id="cabeçalho">
+                <h1 class="header_main">Criando meu primeiro site</h1>
+            </header>
+        </div>
     </body>
 </html>
