--- a/Treinamento/main.html
+++ b/Treinamento/main.html
@@ -13,6 +13,7 @@
             <header id="cabeçalho">
                 <h1 class="header_main">Criando meu primeiro site</h1>
             </header>
+            <img id="image_back" src="Figures/image10.jpg">
         </div>
     </body>
 </html>
