--- a/Treinamento/main.html
+++ b/Treinamento/main.html
@@ -11,9 +11,22 @@
     <body>
         <div>
             <header id="cabeçalho">
-                <h1 class="header_main">Criando meu primeiro site</h1>
+                <h1 id="header_main">Criando meu primeiro site</h1>
             </header>
-            <img id="image_back" src="Figures/image10.jpg">
+        </div>
+        <div>
+            <nav id="nav">
+                <ul>
+                    <li class="list1"><a class="link_menu" href="https://www.google.com.br/">Google</a></li>
+                    <li class="list1"><a class="link_menu" href="https://github.com/WeberGaia">GitHub</a></li>
+                    <li class="list1"><a class="link_menu" href="https://www.linkedin.com/feed/">Linkedin</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <img class="figure" src="Figures/image8.jpg">
+            <img class="figure" src="Figures/image10.jpg">
+            <img class="figure" src="Figures/image9.jpg">
         </div>
     </body>
 </html>
