--- a/Treinamento/main.html
+++ b/Treinamento/main.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Minha página</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div>
-            <header id="cabeçalho">
-                <h1 id="header_main">Criando meu primeiro site</h1>
-            </header>
-        </div>
-        <div>
-            <nav id="nav">
-                <ul>
-                    <li class="list1"><a class="link_menu" href="https://www.google.com.br/">Google</a></li>
-                    <li class="list1"><a class="link_menu" href="https://github.com/WeberGaia">GitHub</a></li>
-                    <li class="list1"><a class="link_menu" href="https://www.linkedin.com/feed/">Linkedin</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div>
-            <img class="figure" src="Figures/image8.jpg">
-            <img class="figure" src="Figures/image10.jpg">
-            <img class="figure" src="Figures/image9.jpg">
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
 </html>
