--- a/Treinamento/main.html
+++ b/Treinamento/main.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebsGaF - Tech</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style_main.css">
-</head>
-<body>
-    <h1>WebsGaF - Tecnologia e Inovação</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>WebsGaF - Tech</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style_main.css">
+    </head>
+    <body>
+        <header>
+            <div id="caixa">
+                <img id="logo" src="Figures/logo2.png">
+                <nav>
+                    <ul>
+                        <li><a class="menu_main" href="main.html">Home</a></li>
+                        <li><a class="menu_main" href="servicos.html">Serviços</a></li>
+                        <li><a class="menu_main" href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main>
+            <ul class="missao">
+                <li>
+                    <h2>Nossa missão</h2>
+                    <p>Oferecer serviços e soluções customizados, de alta qualidade e excelência, concretizando o retorno do investimento de nossos clientes.</p>
+                </li>
+                <li>
+                    <h2>Nossa Visão</h2>
+                    <p>Ser reconhecido como excelência na prestação de serviços de Tecnologia da Informação e Comunicação por nossos usuários.</p>
+                </li>
+                <li>
+                    <h2>Nossos Valores</h2>
+                    <p>Os princípios norteados sobre os quais a WebsGaF foi fundada e como nos esforçamos para conduzir nossos negócios diariamente.</p>
+                </li>
+            </ul>
+        </main>
+        <div class="rodape1">
+            <footer id="rodape">
+                <img id="fig2" src="Figures/logo2.png">
+                <p class="copyright">&copy; Copyright WebsGaF - 2023</p>
+            </footer>
+        </div>
+    </body>
 </html>
