--- a/Treinamento/servicos.html
+++ b/Treinamento/servicos.html
@@ -19,5 +19,21 @@
                 </nav>
             </div>
         </header>
+        <main>
+                <ul class="servicos">
+                    <li>
+                        <h2>Desenvolvimento front-end</h2>
+                        <img src="Figures/image10.jpg">
+                    </li>
+                    <li>
+                        <h2> Desenvolvimento Back-End</h2>
+                        <img src="Figures/image8.jpg">
+                    </li>
+                    <li>
+                        <h2> Banco de dados</h2>
+                        <img src="Figures/image7.jpg">
+                    </li>
+                </ul>
+        </main>
     </body>
 </html>
